--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,4 +80,37 @@ h2 {
     background-color: lightgray;
 }
     */
+
+/* media queries */
+/* Medium devices (tablets, 768px and up) */
+@media screen and (min-width: 768px) {
+    #services .card-body {
+        /*make all services cards the same height for consistency*/
+        min-height: 191px;
+    }
+}
+
+/* Large devices (small laptops, 992px and up */
+@media screen and (min-width: 992px) {
+    #services .card-body {
+        /*make all services cards the same height for consistency*/
+        min-height: auto;
+     }
+}
+
+/* xl devices (large desktops, 1200px and up */
+@media screen and (min-width: 1200px) {
+    #services .card-body {
+        /*make all services cards the same height for consistency*/
+        min-height: 220px;
+     }
+}
+
+/* xxl devices (large desktops, 1400px and up */
+@media screen and (min-width: 1400px) {
+    #services .card-body {
+        /*make all services cards the same height for consistency*/
+        min-height: 195px;
+     }
+}
     
