--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap');
 
-/* CSS variables*/
+/* CSS Variables */
 :root {
-    --primary-font: "inter", sans-sarif;
+    --primary-font: "Inter", sans-serif;
     --secondary-font: "Macondo", cursive;
     --primary-color: #3a2620; /* dark brown */
     --secondary-color: #aa9581; /* light brown */
     --highlight-color: #416a8e; /* blue */
-    --hightlight-color-light: #7a9fc2; /* light blue */
+    --highlight-color-light: #7a9fc2; /* light blue */
 }
 
-/* Global style */
+/* Global styles */
 
 body {
     font-family: var(--primary-font);
@@ -43,6 +43,7 @@ h2 {
 }
 
 /* Navbar */
+
 #navbar {
     background-color: var(--primary-color);
 }
@@ -52,6 +53,7 @@ h2 {
 }
 
 /* Header */
+
 #header .lead {
     font-family: var(--secondary-font);
 }
@@ -68,9 +70,52 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
-/* grid visualuisation CSS for testing 
+/* Game library cards */
 
-.container,
+#new-games .card,
+#fav-games .card {
+    border: none;
+}
+
+/* Footer / contact */
+
+#contact {
+    background-color: var(--primary-color);
+    color: white;
+    padding-bottom: 3rem;
+}
+
+#contact h2 {
+    color: white;
+}
+
+#contact .sub-heading-color {
+    color: var(--highlight-color-light);
+}
+
+#contact i {
+    color: var(--secondary-color);
+    font-size: 1.2rem;
+    margin-right: 15px;
+}
+
+#contact .social-links i {
+    color: var(--highlight-color-light);
+    font-size: 1.9rem;
+    transition: color 0.3s ease-in-out;
+}
+
+#contact .social-links i:hover {
+    color: var(--secondary-color);
+}
+
+#contact .table-dark * {
+    background-color: transparent;
+}
+
+/* grid visualisation CSS for testing */
+
+/* .container,
 .row {
     border: 2px solid black;
 }
@@ -78,39 +123,38 @@ h2 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
-    */
+} */
 
-/* media queries */
+/* Media queries */
+
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
+    /* Make all service cards the same height for consistency */
     #services .card-body {
-        /*make all services cards the same height for consistency*/
         min-height: 191px;
     }
 }
 
-/* Large devices (small laptops, 992px and up */
+/* Large devices (small laptops, 992px and up) */
 @media screen and (min-width: 992px) {
+    /* Make all service cards the same height for consistency */
     #services .card-body {
-        /*make all services cards the same height for consistency*/
         min-height: auto;
-     }
+    }
 }
 
-/* xl devices (large desktops, 1200px and up */
+/* xl devices (large desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
+    /* make all service cards the same height for consistency */
     #services .card-body {
-        /*make all services cards the same height for consistency*/
         min-height: 220px;
-     }
+    }
 }
 
-/* xxl devices (large desktops, 1400px and up */
+/* xxl devices (larger desktops, 1400px and up) */
 @media screen and (min-width: 1400px) {
+    /* make all service cards the same height for consistency */
     #services .card-body {
-        /*make all services cards the same height for consistency*/
         min-height: 195px;
-     }
+    }
 }
-    
